# chatlab-engine-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt  config.jsonc  imgui.ini
engine/include/chatlab/: camera.h  engine.h  mesh.h  primitives.h  service_locator.h  shader.h  transform.h
engine/include/chatlab/platform/: glfw_window.h  window.h
engine/src/: camera.cpp  engine.cpp  mesh.cpp  primitives.cpp  shader.cpp  transform.cpp
engine/src/platform/: glfw_window.cpp
shaders/: default.frag.glsl  default.vert.glsl
